# unify_idents

./: .coveragerc  .gitignore  AUTHORS.TXT  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox_ci.yml
docs/: requirements.txt
docs/source/: advanced_usage.rst  conf.py  ident_parsers.rst  index.rst  modules.rst  unify.rst
example_scripts/: unify_msamanda.py  unify_msfragger.py
tests/: conftest.py  test_engine_parser_base_parser.py  test_engine_parser_ident_base_parser.py  test_engine_parser_msamanda.py  test_engine_parser_msfragger_3.py  test_engine_parser_msgfplus_2021_03_22.py  test_engine_parser_omssa.py  test_engine_parser_quant_base_parser.py  test_engine_parser_xtandem_alanine.py  test_unified_row.py  test_unify.py
tests/data/: BSA1_comet_2020_01_4.mzid  BSA1_msamanda_2_0_0_17442.csv  BSA1_msgfplus_2021_03_22.mzid  BSA1_msgfplus_2021_03_22_unknown_mod.mzid  BSA1_mzml2mgf_0_0_1_msamanda_2_0_0_17442.csv  BSA1_mzml2mgf_0_0_1_omssa_2_1_9.csv_tmp  BSA1_ursgal_lookup.csv  BSA1_ursgal_lookup.csv.bz2  BSA1_xtandem_alanine.xml  BSA_msamanda_2_0_0_17442.csv  _ursgal_lookup.csv  _ursgal_lookup.csv.bz2  custom_mod.xml  flash_lfq_1_2_0_quantified_peaks.tsv  human_ecoli_test_target_decoy.fasta  msfragger_merged_mods.tsv  msfragger_no_mods.tsv  msfragger_single_mod.tsv  multiple_psms_xtandem.xml  quant_pot.json  quant_pot2.json  test_Creinhardtii_QE_pH11_msamanda_2_0_0_17442.csv  test_Creinhardtii_QE_pH11_msfragger_3.tsv  test_Creinhardtii_QE_pH11_msgfplus_2021_03_22.mzid  test_Creinhardtii_QE_pH11_mzml2mgf_0_0_1_msfragger_3.tsv  test_Creinhardtii_QE_pH11_omssa_2_1_9.csv  test_Creinhardtii_QE_pH11_xtandem_alanine.xml  unified_quant_headers.csv  usermods.xml
tests/ident/: test_engine_parser_comet_2020_01_04.py  test_engine_parser_mascot_2_6_2.py  test_engine_parser_msamanda.py  test_engine_parser_msfragger_3.py  test_engine_parser_msgfplus_2021_03_22.py  test_engine_parser_omssa.py  test_engine_parser_xtandem_alanine.py
tests/mapping/: test_TMTpro_mapping.py
tests/quant/: test_engine_parser_flash_lfq_1_2_0.py
unify_idents/: __init__.py  unified_row.py.bck  unify.py  utils.py
unify_idents/engine_parsers/: base_parser.py  dummy_parser.py  misc.py  msamanda_parser.py  msfragger3_parser.py  omssa_parser.py  (+2 more)
(+23 files in other folders)
