[metadata]
name = pyProtista
description = tba
long_description = tba
author = tba
author_email = christian@fufezan.net
url = github.com/computational-ms/unify-idents
license = tba
classifier = 
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Education
     Intended Audience :: Science/Research
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
     Operating System :: POSIX :: SunOS/Solaris
     Operating System :: Unix
     Programming Language :: Python :: 3.5
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Chemistry
     Topic :: Scientific/Engineering :: Medical Science Apps

[options]
packages = find:
install_requires =
    unimod-mapper~=0.6.6
    peptide-mapper~=0.4.3
    chemical-composition~=1.0.6
    pyahocorasick~=1.4.4
    pandas~=1.4.3
    numpy>=1.22.0
    loguru~=0.6.0
    tqdm~=4.64.0
    regex~=2022.7.25
    uparma~=0.9.8
    lxml~=4.9.1
    IsoSpecPy~=2.2.0


[options.package_data]
* = *.txt

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme

[egg_info]
egg_base = .
